concordium-std-derive/tests/test-programs/fail-acc-invalid-base58.stderr
error: Invalid account address: Invalid Base58Check encoding.
 --> tests/test-programs/fail-acc-invalid-base58.rs:6:46
  |
6 | const ACC: AccountAddress = account_address!("30Bx2h5Y2veb4hZgAJWPrr8RyQESKm5TjzF3ti1QQ4VSYLwK1G");
  |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
